fix favorites title size on mobile screens

--- a/src/pages/account/style.scss
+++ b/src/pages/account/style.scss
@@ -98,14 +98,17 @@
     }
     .carouselTitle {
       display: flex;
-      font-size: 24px;
+      font-size: 20px;
       color: white;
       font-weight: normal;
       padding: 0.25rem 0.5rem;
       background-color: rgba(255, 255, 255, 0.091);
       border-radius: 0.5rem;
       backdrop-filter: blur(2.5px);
-      o svg {
+      @include md {
+        font-size: 24px;
+      }
+      svg {
         margin-left: 0.5rem;
       }
     }
